@@ -1,3 +1,11 @@
+1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Customize.m (_obj_splitPhases): Rename className to classNameBuf.
+	Reformat function.
+
+	* Symbol.m ([Symbol_c +create:setName:]): Rename variable newName
+	to newNameBuf.
+
 1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Symbol.m ([Symbol_c -raiseEvent:]): Constify argument (Error_c,
